--- a/test/test.csproj
+++ b/test/test.csproj
@@ -60,6 +60,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tutorial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tutorial.Designer.cs">
+      <DependentUpon>tutorial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="vergelijking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="vergelijking.Designer.cs">
+      <DependentUpon>vergelijking.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Home1.resx">
       <DependentUpon>Home1.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +88,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="tutorial.resx">
+      <DependentUpon>tutorial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="vergelijking.resx">
+      <DependentUpon>vergelijking.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
