--- a/test/test.csproj
+++ b/test/test.csproj
@@ -46,19 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Home1.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form3.cs" />
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
+    <Compile Include="tutorial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tutorial.Designer.cs">
+      <DependentUpon>tutorial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="vergelijking.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="vergelijking.Designer.cs">
@@ -66,15 +71,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Home1.resx">
-      <DependentUpon>Home1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\test.Form2.resources" />
+    <EmbeddedResource Include="obj\Debug\test.Form3.resources" />
+    <EmbeddedResource Include="obj\Debug\test.Properties.Resources.resources" />
+    <EmbeddedResource Include="obj\Debug\test.tutorial.resources" />
+    <EmbeddedResource Include="obj\Debug\test.Variabelen.resources" />
+    <EmbeddedResource Include="obj\Debug\test.vergelijking.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -91,6 +99,12 @@
     <EmbeddedResource Include="vergelijking.resx">
       <DependentUpon>vergelijking.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="bin\Debug\test.exe.config" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\test.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\test.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\test.csproj.GenerateResource.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -109,6 +123,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Volster.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\test.exe" />
+    <Content Include="bin\Debug\test.pdb" />
+    <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
+    <Content Include="obj\Debug\test.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\test.exe" />
+    <Content Include="obj\Debug\test.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
+    <Folder Include="obj\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
