--- a/test/test.csproj
+++ b/test/test.csproj
@@ -49,13 +49,23 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
+    <Compile Include="tutorial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tutorial.Designer.cs">
+      <DependentUpon>tutorial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="vergelijking.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="vergelijking.Designer.cs">
@@ -70,7 +80,6 @@
       <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\test.Form2.resources" />
-    <EmbeddedResource Include="obj\Debug\test.Form3.resources" />
     <EmbeddedResource Include="obj\Debug\test.Properties.Resources.resources" />
     <EmbeddedResource Include="obj\Debug\test.tutorial.resources" />
     <EmbeddedResource Include="obj\Debug\test.Variabelen.resources" />
