--- a/test/test.csproj
+++ b/test/test.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETCoreApp,Version=v3.1.AssemblyAttributes.cs" />
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
+    <Compile Include="obj\Debug\test.AssemblyInfo.cs" />
     <Compile Include="vergelijking.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,9 +99,14 @@
     <EmbeddedResource Include="vergelijking.resx">
       <DependentUpon>vergelijking.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="bin\Debug\netcoreapp3.1\test.deps.json" />
+    <None Include="bin\Debug\netcoreapp3.1\test.runtimeconfig.dev.json" />
+    <None Include="bin\Debug\netcoreapp3.1\test.runtimeconfig.json" />
     <None Include="bin\Debug\test.exe.config" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\test.AssemblyInfoInputs.cache" />
+    <None Include="obj\Debug\test.assets.cache" />
     <None Include="obj\Debug\test.csproj.AssemblyReference.cache" />
     <None Include="obj\Debug\test.csproj.CoreCompileInputs.cache" />
     <None Include="obj\Debug\test.csproj.GenerateResource.cache" />
@@ -122,8 +130,12 @@
     <None Include="Resources\Volster.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\netcoreapp3.1\test.dll" />
+    <Content Include="bin\Debug\netcoreapp3.1\test.exe" />
+    <Content Include="bin\Debug\netcoreapp3.1\test.pdb" />
     <Content Include="bin\Debug\test.exe" />
     <Content Include="bin\Debug\test.pdb" />
+    <Content Include="obj\Debug\apphost.exe" />
     <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
     <Content Include="obj\Debug\test.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\test.exe" />
