--- a/test/test.csproj
+++ b/test/test.csproj
@@ -79,16 +79,6 @@
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="obj\Debug\test.Form2.resources" />
-    <EmbeddedResource Include="obj\Debug\test.Home1.resources" />
-    <EmbeddedResource Include="obj\Debug\test.Properties.Resources.resources" />
-    <EmbeddedResource Include="obj\Debug\test.tutorial.resources" />
-    <EmbeddedResource Include="obj\Debug\test.vergelijking.resources" />
-    <EmbeddedResource Include="obj\Debug\test.Form2.resources" />
-    <EmbeddedResource Include="obj\Debug\test.Properties.Resources.resources" />
-    <EmbeddedResource Include="obj\Debug\test.tutorial.resources" />
-    <EmbeddedResource Include="obj\Debug\test.Variabelen.resources" />
-    <EmbeddedResource Include="obj\Debug\test.vergelijking.resources" />
     <EmbeddedResource Include="tutorial.resx">
       <DependentUpon>tutorial.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,13 +114,13 @@
     <Content Include="bin\Debug\netcoreapp3.1\test.dll" />
     <Content Include="bin\Debug\test.exe" />
     <Content Include="bin\Debug\test.pdb" />
-    <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
     <Content Include="obj\Debug\test.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\test.exe" />
     <Content Include="obj\Debug\test.pdb" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Release\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
